--- a/.htaccess
+++ b/.htaccess
@@ -5,3 +5,15 @@
 # Any changes to the directives between these markers will be overwritten.
 
 # END WordPress
+
+# BEGIN WordPress
+ 
+RewriteEngine On
+RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
+RewriteBase /
+RewriteRule ^index\.php$ - [L]
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule . /index.php [L]
+ 
+# END WordPress
